feat(FS-155): GET Contest Upcoming Endpoint
